# test_task_script_by_log_file

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_main.py  tests.py
