[tool.poetry]
name = "test-task-script-by-log-file"
version = "0.1.0"
description = ""
authors = ["Julia Bengert <yubengert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
tabulate = "^0.9.0"
pytest = "^8.4.1"
coverage = "^7.10.1"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
