[tool.poetry]
name = "test-task-script-by-log-file"
version = "0.1.0"
description = ""
authors = ["Julia Bengert <yubengert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
tabulate = "^0.9.0"
pytest = "^8.4.1"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest-cov = "^6.2.1"

[tool.isort]
line_length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
